--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,13 +24,22 @@ jobs:
       with:
         go-version: '1.21'
 
+    - name: Run unit tests
+      run: go test ./...
+
+    - name: Build Docker Image using build.sh
+      run: |
+          chmod +x ./testdata/docker/build.sh
+          ./testdata/docker/build.sh
+
+
     - name: Run quickstart.sh script
       run: |
-        chmod +x ./quickstart.sh
-        ./quickstart.sh standalone
-        
+            chmod +x ./quickstart.sh
+            ./quickstart.sh standalone &
+            
     - name: Wait for local chain setup
-      run: sleep 10
+      run: sleep 25
 
-    - name: Run tests
+    - name: Run integration tests
       run: go test -tags=integration ./...
