fix: force to only run integration tests, run them sequentially otherwise node oberloads
Signed-off-by: Sophia Koehler <sophia@perun.network>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,4 +48,7 @@ jobs:
       run: sleep 50
 
     - name: Run integration tests
-      run: go test -tags=integration ./...
+      run: go test -tags=integration -p 1 ./channel ./payment
+
+    - name: Stop local chain
+      run: docker stop stellar
